# gha-job-scraper

./: .gitignore  CLAUDE_SETUP.md  README.md  pyproject.toml  seen_jobs.json
.github/workflows/: live-check.yml  scrape.yml
scraper/: filters.py  main.py  notify.py  sources.py  state.py
tests/: test_filters.py  test_google_source.py  test_live_sources.py  test_notify.py  test_sources.py  test_state.py
tests/fixtures/: ashby_sample.json  aws_sample.json  coderabbit_sample.json  google_sample.json  lever_sample.json  uber_sample.json  zap_sample.json
