[project]
name = "gha-job-scraper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "playwright>=1.45",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: hits real upstream APIs; excluded from default runs",
]
addopts = "-m 'not live'"
